# log_server

./: .env  .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
migrations/: message.sql  user.sql
sql/: count_message.sql  insert_message.sql  select_message.sql
sql/message/: insert.sql  search.sql  select.sql
sql/user/: count.sql  delete.sql  get.sql  insert.sql  search.sql  select.sql  update.sql
src/: api_server.rs  cli.rs  database.rs  encryption.rs  fetch_server.rs  lib.rs  main.rs  message.rs  message_api.rs  processing_server.rs
src/api/: message.rs  user.rs
src/model/: message.rs  user.rs
src/server/: api.rs  fetch.rs  mod.rs  processing.rs
