[package]
name = "log_server"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3


[dependencies]
async-nats = "0.42.0"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "string"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
