[package]
name = "log_server"
version = "0.1.2"
edition = "2024"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3


[dependencies]
async-nats = "0.42.0"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "string"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }

poem-openapi = { version = "2", features = ["swagger-ui", "openapi-explorer"]}
poem = "1"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite"] }
regex = "1.11.1"
argon2 = "0.5.3"
password-hash = "0.5.0"
